--- a/index.html
+++ b/index.html
@@ -59,11 +59,25 @@
       background-position: center;
       transform: rotateY(180deg);
     }
+    .info-bar {
+      display: flex;
+      justify-content: space-between;
+      font-size: 0.8rem;
+      padding: 5px 10px;
+    }
   </style>
 </head>
 <body>
 
-  <div class="game-board" id="gameBoard"></div>
+  <div class="card shadow" style="max-width: 420px;">
+    <div class="info-bar">
+      <div id="gameTimer">Süre: 00:00</div>
+      <div id="moveCounter">Hamle: 0</div>
+    </div>
+    <div class="card-body">
+      <div class="game-board" id="gameBoard"></div>
+    </div>
+  </div>
 
   <script>
     const cards = [
@@ -77,6 +91,9 @@
     let firstCard, secondCard;
     let lockBoard = false;
     let matches = 0;
+    let moveCount = 0;
+    let seconds = 0;
+    let timerInterval;
 
     function shuffle(array) {
       array.sort(() => Math.random() - 0.5);
@@ -97,6 +114,7 @@
         cardElement.addEventListener("click", flipCard);
         gameBoard.appendChild(cardElement);
       });
+      startTimer();
     }
 
     function flipCard() {
@@ -120,10 +138,12 @@
         matches += 1;
         if (matches === cards.length / 2) {
           setTimeout(() => alert("Tebrikler! Tüm eşleşmeleri buldunuz."), 500);
+          clearInterval(timerInterval); // Oyun bittiğinde sayaç durdurulacak
         }
       } else {
         unflipCards();
       }
+      updateMoveCounter();
     }
 
     function disableCards() {
@@ -143,6 +163,22 @@
 
     function resetBoard() {
       [firstCard, secondCard, lockBoard] = [null, null, false];
+    }
+
+    function updateMoveCounter() {
+      moveCount++;
+      document.getElementById("moveCounter").innerText = `Hamle: ${moveCount}`;
+    }
+
+    function startTimer() {
+      timerInterval = setInterval(updateTimer, 1000);
+    }
+
+    function updateTimer() {
+      seconds++;
+      const minutes = Math.floor(seconds / 60);
+      const displaySeconds = seconds % 60 < 10 ? '0' + (seconds % 60) : seconds % 60;
+      document.getElementById("gameTimer").innerText = `Süre: ${minutes}:${displaySeconds}`;
     }
 
     createBoard();
