--- a/index.html
+++ b/index.html
@@ -71,13 +71,18 @@
     .info-bar {
       display: flex;
       justify-content: space-between;
-      font-size: 0.8rem;
-      padding: 5px 10px;
+      font-size: 0.9rem;
+      padding: 5px 15px;
     }
     .button-bar {
       display: flex;
-      justify-content: space-between;
-      margin-top: 10px;
+      gap: 10px;
+      margin: 10px;
+    }
+    .btn-custom {
+      flex: 1;
+      height: 40px;
+      font-size: 1rem;
     }
   </style>
 </head>
@@ -88,12 +93,12 @@
       <div id="gameTimer">Süre: 00:00</div>
       <div id="moveCounter">Hamle: 0</div>
     </div>
-    <div class="card-body">
+    <div class="card-body p-2">
       <div class="game-board" id="gameBoard"></div>
     </div>
     <div class="button-bar">
-      <button id="startButton" class="btn btn-success btn-block" onclick="startGame()">BAŞLA</button>
-      <button id="resetButton" class="btn btn-danger btn-block" onclick="resetGame()">SIFIRLA</button>
+      <button id="startButton" class="btn btn-success btn-custom" onclick="startGame()">BAŞLA</button>
+      <button id="resetButton" class="btn btn-danger btn-custom" onclick="resetGame()">SIFIRLA</button>
     </div>
   </div>
 
@@ -137,9 +142,15 @@
     }
 
     function flipCard() {
-      if (lockBoard || !gameStarted) return;
+      if (lockBoard) return;
+
+      if (!gameStarted) {
+        gameStarted = true;
+        startTimer();
+      }
+
       const cardInner = this.querySelector(".card-inner");
-      if (cardInner === firstCard || cardInner.classList.contains("matched")) return; // Aynı kart tekrar seçilmez veya eşleşmiş kartlar açılmaz
+      if (cardInner === firstCard || cardInner.classList.contains("matched")) return;
       cardInner.classList.add("flipped");
 
       if (!firstCard) {
@@ -158,7 +169,7 @@
         matches += 1;
         if (matches === cards.length / 2) {
           setTimeout(() => alert("Tebrikler! Tüm eşleşmeleri buldunuz."), 500);
-          clearInterval(timerInterval); // Oyun bittiğinde sayaç durdurulacak
+          clearInterval(timerInterval);
         }
       } else {
         shakeAndUnflipCards();
@@ -204,15 +215,12 @@
     }
 
     function startGame() {
-      if (!gameStarted) {
-        gameStarted = true;
-        moveCount = 0;
-        seconds = 0;
-        matches = 0;
-        document.getElementById("moveCounter").innerText = `Hamle: 0`;
-        document.getElementById("gameTimer").innerText = `Süre: 00:00`;
-        startTimer();
-      }
+      gameStarted = false;
+      moveCount = 0;
+      seconds = 0;
+      matches = 0;
+      document.getElementById("moveCounter").innerText = `Hamle: 0`;
+      document.getElementById("gameTimer").innerText = `Süre: 00:00`;
     }
 
     function resetGame() {
