--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     .card {
       width: 100%;
-      padding-top: 100%; /* Kare kartlar için */
+      padding-top: 200%; /* Yükseklik 2 katına çıkarıldı */
       position: relative;
       cursor: pointer;
       perspective: 1000px;
