--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
   <style>
     body, html {
       font-family: Arial, sans-serif;
+      height: 100%;
+      margin: 0;
+      background-color: #f4f4f4;
+    }
+    .container {
+      max-width: 100%;
+      padding: 0;
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f4f4f4;
+    }
+    .card {
+      width: 100%;
+      max-width: 420px;
     }
     .game-board {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       grid-gap: 10px;
-      max-width: 400px;
       width: 100%;
     }
     .card {
       width: 100%;
-      padding-top: 100%; /* Kare kartlar */
+      padding-top: 100%;
       position: relative;
       cursor: pointer;
       perspective: 1000px;
@@ -62,7 +70,20 @@
       display: flex;
       justify-content: space-between;
       font-size: 0.9rem;
-      padding: 5px 15px;
+      padding: 0 10px;
+      margin-bottom: 10px;
+    }
+    .button-bar {
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+    }
+    .btn-custom {
+      width: 100%;
+      height: 50px;
+      font-size: 1.2rem;
+      background-color: green;
+      color: white;
     }
     .result-log ul {
       list-style-type: none;
@@ -73,36 +94,30 @@
       font-size: 0.9rem;
       font-weight: bold;
     }
+    .result-log {
+      margin-top: 15px;
+    }
   </style>
 </head>
 <body>
 
-  <div class="container mt-4">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header text-center">
-            <h4>Eşleştirme Oyunu</h4>
-          </div>
-          <div class="card-body">
-            <div class="info-bar mb-3">
-              <div id="gameTimer">Süre: 00:00</div>
-              <div id="moveCounter">Hamle: 0</div>
-            </div>
-            <div class="game-board" id="gameBoard"></div>
-            <div class="button-bar mt-3 text-center">
-              <button id="resetButton" class="btn btn-success btn-lg" onclick="resetGame()">BAŞTAN BAŞLA</button>
-            </div>
-          </div>
+  <div class="container">
+    <div class="card">
+      <div class="card-header text-center p-2">
+        <h4 class="mb-1">Eşleştirme Oyunu</h4>
+      </div>
+      <div class="card-body">
+        <div class="info-bar">
+          <div id="gameTimer">Süre: 00:00</div>
+          <div id="moveCounter">Hamle: 0</div>
         </div>
-
-        <div class="card mt-4">
-          <div class="card-header text-center">
-            <h5>Oyun Sonuçları</h5>
-          </div>
-          <div class="card-body">
-            <ul id="resultsList"></ul>
-          </div>
+        <div class="game-board" id="gameBoard"></div>
+        <div class="button-bar mt-3 text-center">
+          <button id="resetButton" class="btn btn-custom" onclick="resetGame()">BAŞTAN BAŞLA</button>
+        </div>
+        <div class="result-log mt-3">
+          <h5 class="text-center">Oyun Sonuçları</h5>
+          <ul id="resultsList"></ul>
         </div>
       </div>
     </div>
