--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       max-width: 420px;
       margin-top: 0; /* Üst boşluğu sıfırladık */
     }
+    .card-header {
+      margin-top: 0; /* Üst boşluğu sıfırladık */
+    }
+    
     .game-board {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
