--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
       display: flex;
       justify-content: center;
       align-items: flex-start; /* Sayfanın üstüne yerleştiriyoruz */
-      padding-top: 0; /* Üst boşluğu sıfırladık */
     }
     .container {
       width: 100%;
       max-width: 420px;
       padding: 0;
+      margin: 0; /* Üst boşluğu tamamen sıfırlamak için */
     }
     .card-header {
       margin-top: 0;
+      padding: 0.5rem 1rem; /* Varsayılan padding */
     }
     .game-board {
       display: grid;
