--- a/index.html
+++ b/index.html
@@ -13,25 +13,28 @@
     }
     html, body {
       height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
       display: flex;
       justify-content: center;
-      align-items: flex-start; /* Sayfanın üstüne yerleştiriyoruz */
+      align-items: center;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
     }
     .container {
       width: 100%;
       max-width: 420px;
       padding: 0;
-      margin: 0; /* Üst boşluğu tamamen sıfırlamak için */
     }
-    .card-header {
-      margin-top: 0;
-      padding: 0.5rem 1rem; /* Varsayılan padding */
+    .card {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      background-color: white;
     }
     .game-board {
       display: grid;
@@ -81,10 +84,12 @@
       font-size: 0.9rem;
       padding: 0 10px;
       margin-bottom: 10px;
+      width: 100%;
     }
     .button-bar {
       display: flex;
       justify-content: center;
+      width: 100%;
       margin-top: 15px;
     }
     .btn-custom {
@@ -97,6 +102,7 @@
     .result-log ul {
       list-style-type: none;
       padding: 0;
+      margin: 0;
     }
     .result-log ul li {
       margin-bottom: 10px;
@@ -105,6 +111,7 @@
     }
     .result-log {
       margin-top: 15px;
+      width: 100%;
     }
   </style>
 </head>
