--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f4f4f4;
       margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
     }
     body {
       padding: 20px;
     }
     .container {
       width: 100%;
-      max-width: 420px;
+      max-width: 600px; /* Daha geniş ekranlar için genişliği artırdık */
+      padding: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       background-color: white;
-      padding: 20px;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
@@ -39,6 +40,7 @@
       grid-template-columns: repeat(4, 1fr);
       grid-gap: 10px;
       width: 100%;
+      max-width: 500px; /* Kartların boyutu için genişlik sınırı belirledik */
     }
     .card {
       width: 100%;
