--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
     .card {
       width: 100%;
-      padding-top: 150%; /* Kartların %50 büyütülmesi için oran artırıldı */
+      aspect-ratio: 1 / 1; /* Kartları kare yapıyoruz */
       position: relative;
       cursor: pointer;
       perspective: 1000px;
