--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
     .container {
       width: 100%;
-      max-width: 500px; /* Konteynerin genişliği ayarlandı */
+      max-width: 500px;
       padding: 20px;
       display: flex;
       flex-direction: column;
@@ -49,9 +49,9 @@
     .game-board {
       display: grid;
       grid-template-columns: repeat(3, 1fr); /* 3 sütun olarak ayarlandı */
-      grid-gap: 20px; /* Kartlar arasındaki boşluk artırıldı */
+      grid-gap: 5px; /* Kartlar arasındaki boşluk azaltıldı */
       width: 100%;
-      max-width: 500px; /* Maksimum genişlik artırıldı */
+      max-width: 500px; /* Maksimum genişlik ayarlandı */
     }
     .card {
       width: 100%;
@@ -97,10 +97,11 @@
     }
     .btn-custom {
       width: 100%;
-      height: 50px;
+      height: 60px; /* Butonun yüksekliği ayarlandı */
       font-size: 1.2rem;
       background-color: green;
       color: white;
+      max-width: 500px; /* 3 kart genişliğinde */
     }
     .result-log ul {
       list-style-type: none;
