--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
     .container {
       width: 100%;
-      max-width: 400px;
+      max-width: 500px;
       padding: 20px;
       display: flex;
       flex-direction: column;
@@ -48,13 +48,14 @@
     }
     .game-board {
       display: grid;
-      grid-template-columns: repeat(3, 1fr); /* 3 sütun */
-      gap: 8px; /* Gap boyutu ayarlandı */
+      grid-template-columns: repeat(3, 1fr); /* 3 sütun olarak ayarlandı */
+      grid-gap: 5px; /* Kartlar arasındaki boşluk azaltıldı */
       width: 100%;
+      max-width: 500px; /* Maksimum genişlik ayarlandı */
     }
     .card {
       width: 100%;
-      aspect-ratio: 1 / 1; /* Kare oranı */
+      aspect-ratio: 1 / 1; /* Kartları kare yapıyoruz */
       position: relative;
       cursor: pointer;
       perspective: 1000px;
@@ -95,11 +96,12 @@
       margin-top: 15px;
     }
     .btn-custom {
-      width: calc(100% - 16px); /* 3 kart + 2 gap genişliğinde */
-      height: 60px;
+      width: 100%;
+      height: 60px; /* Butonun yüksekliği ayarlandı */
       font-size: 1.2rem;
       background-color: green;
       color: white;
+      max-width: 500px; /* 3 kart genişliğinde */
     }
     .result-log ul {
       list-style-type: none;
