--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
       position: relative;
       cursor: pointer;
       perspective: 1000px;
+      width: 150px;
+      height: 150px;
     }
     .card-inner {
       position: absolute;
