--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
     </div>
     <div class="card-body">
       <div class="info-bar">
-        <div id="gameTimer">Süre: 00:00</div>
-        <div id="moveCounter">Hamle: 0</div>
+        <div id="gameTimer"><b>Süre:</b> 00:00</div>
+        <div id="moveCounter"><b>Hamle:</b> 0</div>
       </div>
       <div class="game-board" id="gameBoard"></div>
       <div class="button-bar mt-3 text-center">
