--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <div class="container">
     <div class="card-header text-center p-2">
-      <h4 class="mb-1">Eşleştirme Oyunu</h4>
+      <h4 class="mb-1 justify" >Eşleştirme Oyunu</h4>
     </div>
     <div class="card-body">
       <div class="info-bar">
