--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
 
   <div class="container">
     <div class="card-header text-center p-2">
-      <h4 class="mb-1 justify" >Eşleştirme Oyunu</h4>
+      <div class="alert alert-primary" role="alert">
+  KŞH Acil Eşleştirme Oyunu
+</div>
     </div>
     <div class="card-body">
       <div class="info-bar">
