--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       
     
     <div class="card-body">
-      <div class="alert alert-primary center" role="alert">
+      <div class="alert alert-primary text-center" role="alert">
   KŞH Acil Eşleştirme Oyunu
       </div>
       <div class="info-bar">
