--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
         <button id="resetButton" class="btn btn-custom" onclick="resetGame()">BAŞTAN BAŞLA</button>
       </div>
       <div class="result-log mt-3">
-        <h5 class="text-center">Oyun Sonuçları</h5>
+         <div class="alert alert-info text-center" role="alert">
+  Oyun Sonuçları:
+      </div>
         <ul id="resultsList"></ul>
       </div>
     </div>
