--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
     <div class="sticky-header text-center">
       <div class="alert alert-primary mb-1" role="alert">
         <h4 class="mb-0">KŞH Acil Eşleştirme Oyunu</h4>
+        <hr>
+        <p class="mb-0">Her el skorunuz sayfa altında yer alacaktır.</p>
       </div>
       <div class="info-bar">
         <div id="gameTimer"><b>Süre:</b> 00:00</div>
