--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-color: #f4f4f4;
       display: flex;
       justify-content: center;
-      align-items: flex-start; /* Üst kısma sabitlenmesi için */
+      align-items: flex-start;
     }
     .container {
       width: 100%;
@@ -32,7 +32,7 @@
       background-color: white;
       z-index: 100;
       padding: 10px 0;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Altına gölge eklenir */
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
     .info-bar {
       display: flex;
@@ -51,8 +51,8 @@
       margin: 20px 0;
     }
     .card {
-      width: 100%;
-      aspect-ratio: 1 / 1;
+      width: 100px;
+      height: 100px;
       position: relative;
       cursor: pointer;
       perspective: 1000px;
@@ -86,12 +86,6 @@
       background-position: center;
       transform: rotateY(180deg);
     }
-    .button-bar {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      margin-top: 15px;
-    }
     .btn-custom {
       width: 100%;
       height: 60px;
@@ -99,10 +93,6 @@
       background-color: green;
       color: white;
       max-width: 500px;
-    }
-    .result-log {
-      margin-top: 15px;
-      width: 100%;
     }
     .result-log ul {
       list-style-type: none;
@@ -114,6 +104,10 @@
       font-size: 1rem;
       font-weight: bold;
     }
+    .highlight {
+      color: green; /* En iyi süre ve hamle için renk */
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -122,7 +116,6 @@
     <div class="sticky-header text-center">
       <div class="alert alert-primary mb-1" role="alert">
         <h4 class="mb-0">KŞH Acil Eşleştirme Oyunu</h4>
-        <p class="mb-0">Her el skorunuz sayfa altında yer alacaktır.</p>
       </div>
       <div class="info-bar">
         <div id="gameTimer"><b>Süre:</b> 00:00</div>
@@ -271,14 +264,41 @@
     }
 
     function logResult() {
-      const resultItem = document.createElement("li");
       const minutes = Math.floor(seconds / 60);
       const displaySeconds = seconds % 60 < 10 ? '0' + (seconds % 60) : seconds % 60;
-      resultItem.innerText = `Süre: ${minutes}:${displaySeconds}, Hamle: ${moveCount}`;
+
+      const resultItem = document.createElement("li");
+      resultItem.setAttribute("data-duration", seconds);
+      resultItem.setAttribute("data-moves", moveCount);
+      resultItem.innerHTML = `
+        Süre: <span class="duration">${minutes}:${displaySeconds}</span>, 
+        Hamle: <span class="moves">${moveCount}</span>`;
       resultsList.appendChild(resultItem);
+
+      highlightBestResults();
     }
 
-    createBoard();
+    function highlightBestResults() {
+      const results = Array.from(resultsList.children);
+      if (results.length === 0) return;
+
+      let minDuration = Math.min(...results.map(item => parseInt(item.getAttribute("data-duration"))));
+      let minMoves = Math.min(...results.map(item => parseInt(item.getAttribute("data-moves"))));
+
+      results.forEach(item => {
+        item.querySelector(".duration").classList.remove("highlight");
+        item.querySelector(".moves").classList.remove("highlight");
+
+        if (parseInt(item.getAttribute("data-duration")) === minDuration) {
+          item.querySelector(".duration").classList.add("highlight");
+        }
+        if (parseInt(item.getAttribute("data-moves")) === minMoves) {
+          item.querySelector(".moves").classList.add("highlight");
+        }
+      });
+    }
+
+    createBoard(); // Oyunu başlat
   </script>
 </body>
 </html>
