--- a/index.html
+++ b/index.html
@@ -86,13 +86,19 @@
       background-position: center;
       transform: rotateY(180deg);
     }
-    .btn-custom {
+    .btn-custom, .btn-reset {
       width: 100%;
       height: 60px;
       font-size: 1.2rem;
-      background-color: green;
-      color: white;
       max-width: 500px;
+      color: white;
+    }
+    .btn-custom {
+      background-color: green;
+    }
+    .btn-reset {
+      background-color: red;
+      margin-top: 10px;
     }
     .result-log ul {
       list-style-type: none;
@@ -126,6 +132,7 @@
       <div class="game-board" id="gameBoard"></div>
       <div class="button-bar mt-3 text-center">
         <button id="resetButton" class="btn btn-custom" onclick="resetGame()">BAŞTAN BAŞLA</button>
+        <button id="clearScoresButton" class="btn btn-reset" onclick="clearScores()">SIFIRLA</button>
       </div>
       <div class="result-log mt-3">
         <div class="alert alert-info text-center" role="alert">
@@ -261,6 +268,11 @@
       document.getElementById("moveCounter").innerText = `Hamle: 0`;
       document.getElementById("gameTimer").innerText = `Süre: 00:00`;
       createBoard();
+    }
+
+    function clearScores() {
+      resultsList.innerHTML = ''; // Sonuçları temizle
+      resetGame(); // Oyunu sıfırla
     }
 
     function logResult() {
