--- a/index.html
+++ b/index.html
@@ -86,19 +86,27 @@
       background-position: center;
       transform: rotateY(180deg);
     }
-    .btn-custom, .btn-reset {
+    .button-bar {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
       width: 100%;
-      height: 60px;
-      font-size: 1.2rem;
       max-width: 500px;
-      color: white;
+      margin-top: 15px;
     }
     .btn-custom {
+      flex: 1;
+      height: 60px;
+      font-size: 1.2rem;
       background-color: green;
+      color: white;
     }
     .btn-reset {
+      flex: 1;
+      height: 60px;
+      font-size: 1.2rem;
       background-color: red;
-      margin-top: 10px;
+      color: white;
     }
     .result-log ul {
       list-style-type: none;
@@ -111,7 +119,7 @@
       font-weight: bold;
     }
     .highlight {
-      color: green; /* En iyi süre ve hamle için renk */
+      color: green;
       font-weight: bold;
     }
   </style>
@@ -131,7 +139,7 @@
     <div class="card-body">
       <div class="game-board" id="gameBoard"></div>
       <div class="button-bar mt-3 text-center">
-        <button id="resetButton" class="btn btn-custom" onclick="resetGame()">BAŞTAN BAŞLA</button>
+        <button id="resetButton" class="btn btn-custom" onclick="resetGame()">YENİ EL</button>
         <button id="clearScoresButton" class="btn btn-reset" onclick="clearScores()">SIFIRLA</button>
       </div>
       <div class="result-log mt-3">
